--- a/index.html
+++ b/index.html
@@ -7,10 +7,66 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>RUF</title>
+
+    <style>
+      .block {
+          width:300px;
+          text-align:center;
+          margin-top:50px;
+      }
+      .block .image {
+          position:relative;
+          border-radius:50%;
+          margin:auto;
+      }
+      .block .content {
+          padding:20px 0;
+          font-size:24px;
+      }
+
+
+      /* colores de fondo */
+      .block.blue, .block.blue .image {
+          background-color:#7ac7c7;
+      }
+      .block.red, .block.red .image {
+          background-color:#c77a7a;
+      }
+      .block.green, .block.green .image {
+          background-color:#9fc77a;
+      }
+
+
+      /* tamaños */
+      .block.size16 .image {
+          top:-16px;
+          width:32px;
+          height:32px;
+      }
+      .block.size16 .image img {
+          padding: 8px;
+      }
+      .block.size24 .image {
+          top:-24px;
+          width:48px;
+          height:48px;
+      }
+      .block.size24 .image img {
+          padding: 16px;
+      }
+      .block.size32 .image {
+          top:-32px;
+          width:64px;
+          height:64px;
+      }
+      .block.size32 .image img {
+          padding: 24px;
+      }
+      </style>
   </head>
   <body>
-    <div id="root"></div>
-    
+    <div id="root"></div>   
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
